--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <strong>setColor(2, 0, "purple");</strong>
       
     </div>
-  
+  <!--changing stuff -->
 
   <table id="t">
     <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
